// Vitest Snapshot v1

exports[`<ControlledSelectInput /> > renders the list of items 1`] = `
"  Item 1
  Item 2"
`;

exports[`<ControlledSelectInput /> > renders the selected item with a pointer 1`] = `
"  Item 1
❯ Item 2"
`;
